# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.375 2005/09/14 23:40:32 agaffney Exp $

*GLI-0.2 (4 Aug 2005)

  14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  get_snapshot_from_cd() returns '' instead of 'file://' if nothing found

  5 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  add get_directory_listing_from_uri()
  add http support to above
  add ftp support to above
  add scp support to above
  src/GLIArchitectureTemplate.py:
  "0" instead of 0 for key of single-element dict passed to _edit_config()

  5 Sep 2005; Preston Cody <codeman@gentoo.org>
  value_only -> only_value
  
  3 Sep 2005; Preston Cody <codeman@gentoo.org>
  gutted out all of etc_portage structure since it is now all handled by
  etc_files
  
  3 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  install_packages() sends progress update notifications
  src/templates/x86ArchitectureTemplate.py:
  increase sleep to 5s between format tries
  src/GLIClientController.py:
  pass 'self' to AT instead of 'self._pretend'

  2 Sep 2005; Preston Cody <codeman@gentoo.org>
  logger -> logger.log in x86AT

  1 Sep 2005; Preston Cody <codeman@gentoo.org>
  added set_etc_portage to IP. debugging gli-d's support for it.
  
  1 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  switch to 3 tries for mkfs instead of looping waiting for dev node to exist

  30 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  add _portage_best_version() function and rework install_packages() to allow
  for future X of Y tracking
  Use best_visible instead of best_version
  tracked down and fixed missing = causing empty install extra packages
  use = when emerging also
  quickpkg hokey pokey
  run _get_packages_to_emerge() again with -pk
