@@ -5,24 +5,23 @@ If you are working or plan to work on a task here put your name by it.
 
 Things still needing to be done for the BETA release:
 	Backend:
+		don't rewrite the same config value twice for no reason
+		
 		GLIArchitectureTemplate.build_kernel():
 			- test with 2.4 kernels
 			- Check custom config for correct initrd support when using genkernel
-			- hotplug/coldplug are NOT always needed with genkernel.
 			- might need to pass --udev/--evms2/--lvm2/--dmraid to genkernel.
-			- Source might not be in /usr/src/linux
+			
 		In Progress:
-		secondary progress bar and X of Y for emerge notifications
+		secondary progress bar and X of Y for emerge notifications - works for install_packages. not for emerge system.
 		partitioning error checking.
 		add distcc support
 		add r_pppoe configuration stuff.
 		network mounts into the fstab
-	DialogFE (obsolete):
-		support for /etc/portage/*
-	gli-dialog: 
-		add /etc/portage/* support
-		finish make.conf conversion for advanced menu
 		
+	gli-dialog: 
+		fix install-packages unchecking/grp
+		distcc support
 	gtkFE:
 		listed in fe/gtk/TODO
 
