@@ -850,3 +850,13 @@ def uncdata(text):
 		return text[9:-5]
 	else:
 		return text
+		
+def get_grp_pkgs_from_cd():
+	if not is_file("/usr/livecd/grppkgs.txt"):
+		raise GLIException("GLIUtilityError", "fatal", "get_grp_pkgs_from_cd", "Required file /usr/livecd/grppkgs.txt does not exist")
+	status,output = spawn('cat /usr/livecd/grppkgs.txt',return_output=True)
+	output = output.split()
+	#remove the first part before a / for comparision
+	for pkg in output:
+		output[pkg] = pkg[(pkg.find('/')+1):]
+	return output
