@@ -1,13 +1,13 @@
 GTK Frontend TODO
 =================
 
-disable mountpoint and mountopts fields if fstype == "linux-swap"
+disable mountpoint and mountopts fields if fstype == "linux-swap" (isn't this done?)
 populate ugly partitioning screen (MB and %)
 rewrite users screen
 custom kernel and kernel bootsplash (yes/no) options
+add distcc parameter and configuration options.
 
 
 label size slider in partitioning (DONE)
 error handling for invalid portage snapshot URI (DONE)
 add back resizing support (DONE)
-
