@@ -1,10 +1,19 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.375 2005/09/14 23:40:32 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.376 2005/09/15 21:33:44 codeman Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
+  15 Sep 2005; Preston Cody <codeman@gentoo.org>
+  src/GLIUtility.py
+  added get_grp_pkgs_from_cd() to return a list of packages in GRP for FE menus
+  src/GenDialog.py 
+  still working on extra_packages
+  TODO lists updated.
+  src/fe/dialog/gli-dialog.py
+  spelling mistook.
+  
   14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
   get_snapshot_from_cd() returns '' instead of 'file://' if nothing found
